<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="play">Play Game</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="game">Game</string>
    <string name="winner">Winner</string>
    <string name="piece">Piece</string>
    <string name="number_of_players">Number of Players:</string>
    <string name="who_goes_first">Who Goes First:</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
</resources>