<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:gravity="center"
    android:layout_margin="24dp">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/settings"
        android:textSize = "@dimen/title_size"
        android:textColor="@color/blue_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </TextView>

    <TextView
        android:id="@+id/numPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/number_of_players"
        android:textColor="@color/blue_500"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </TextView>

    <EditText
        android:id="@+id/player_edit_text"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="20sp"
        android:inputType="number"
        android:digits="12"
        android:textColor="@color/blue_500"
        android:background="@color/background_grey"
        app:layout_constraintTop_toBottomOf="@id/numPlayers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </EditText>

    <TextView
        android:id="@+id/whoFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/who_goes_first"
        android:layout_marginTop="75dp"
        android:textColor="@color/blue_500"
        app:layout_constraintTop_toBottomOf="@id/player_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </TextView>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchStartingPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/whoFirst"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "X"
        android:textColor="@color/blue_500"
        app:layout_constraintBaseline_toBaselineOf="@id/switchStartingPlayer"
        app:layout_constraintRight_toLeftOf="@id/switchStartingPlayer">
    </TextView>

    <TextView
        android:id="@+id/o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "O"
        android:textColor="@color/blue_500"
        app:layout_constraintBaseline_toBaselineOf="@id/switchStartingPlayer"
        app:layout_constraintLeft_toRightOf="@id/switchStartingPlayer">
    </TextView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset History"
        android:textColor="@color/blue_500"
        android:textAlignment="center"
        android:onClick="resetHistory"
        app:layout_constraintTop_toBottomOf="@id/switchStartingPlayer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>